# universal-connectivity

./: .env.example  .gitignore  CODEOWNERS  README.md  docker-compose.yml  package-lock.json  package.json  system_messages.txt
.github/: .dependabot.yml  CODEOWNERS  dependabot.yml
.github/workflows/: build-go-peer-docker.yaml  build-go-peer.yaml  build-go-server.yaml  ci.yml  deploy-go-server.yaml  deploy-rust-peer.yml  fly.yml  go-ci-config.json  go-ci.yml  js-peer.yml  mdbook.yml  rust-ci.yml
dotnet-peer/: .gitignore  .uuid  README.md  logo.txt
dotnet-peer/Libp2pChat/: .gitignore  Dockerfile  Libp2pChat.csproj  Program.cs
dotnet-peer/Libp2pChat/Application/Interfaces/: IAppLogger.cs  IChatService.cs
dotnet-peer/Libp2pChat/Application/Services/: ChatApplicationService.cs
dotnet-peer/Libp2pChat/Domain/Models/: ChatMessage.cs  Peer.cs
dotnet-peer/Libp2pChat/Infrastructure/Libp2p/: Libp2pChatService.cs
dotnet-peer/Libp2pChat/Infrastructure/Logging/: LoggerAdapter.cs  TerminalLogger.cs  UiLoggerProvider.cs
dotnet-peer/dotnet-libp2p-chat/: Chat.csproj  Program.cs  README.md  dotnet-libp2p-chat.csproj
dotnet-peer/dotnet-libp2p-chat/Properties/: launchSettings.json
dotnet-peer/dotnet-libp2p-chat/src/: ChatProtocol.cs  ConsoleReader.cs  Program.cs  launchSettings.json
dotnet-peer/screenshots/: screenshot.txt
go-chat-daemon/: chatroom.go  go.mod  go.sum  main.go
go-peer/: .gitignore  Dockerfile  README.md  chatroom.go  flag.go  go.mod  go.sum  identity.go  main.go  ui.go
go-server/: .gitignore  Dockerfile  README.md  chatroom.go  go.mod  go.sum  main.go  ui.go
js-peer/: .eslintrc.json  .gitignore  .prettierignore  Dockerfile  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.js
js-peer/src/components/: alert.tsx  avatar.tsx  badge.tsx  booting.tsx  button.tsx  chat-peer-list.tsx  chat.tsx  checkbox.tsx  connection-info-button.tsx  connection-panel.tsx  dialog.tsx  direct-message.tsx  dropdown.tsx  fieldset.tsx  input.tsx  link.tsx  listbox.tsx  message.tsx  nav.tsx  pagination.tsx  peer-list.tsx  peer-maddr.tsx  peer.tsx  peerID-connect.tsx  pixel-art-editor.tsx  radio.tsx  room-list.tsx  select.tsx  spinner.tsx  switch.tsx  table.tsx  text.tsx  textarea.tsx  video-call.tsx
js-peer/src/components/Nav/: index.tsx
js-peer/src/context/: chat-ctx.tsx  ctx.tsx  file-ctx.tsx  listen-addresses-ctx.tsx  peer-ctx.tsx  pixel-art-ctx.tsx
js-peer/src/hooks/: useMarkAsRead.ts  useMessageHistory.ts
js-peer/src/lib/: classes.ts  constants.ts  direct-message.ts  libp2p.ts  logger.ts  message-store.ts  pixel-art-presets.ts  video-call.ts
js-peer/src/pages/: _app.tsx  _document.tsx  chat.tsx  directMessages.tsx  index.tsx  pixel-art.tsx
nim-peer/: .keep  config.nims  nim_peer.nimble
nim-peer/src/: file_exchange.nim  nim_peer.nim  utils.nim
nim-peer/src/ui/: context.nim  root.nim  scrollingtextbox.nim
node-js-peer/: README.md  package-lock.json  package.json
node-js-peer/src/: App.tsx  constants.ts
node-js-peer/src/components/: booting.tsx  message.tsx  messages.tsx  peer-list.tsx  peer.tsx  send-message.tsx
node-js-peer/src/context/: chat.tsx  index.tsx
node-js-peer/src/hooks/: mark-as-read.ts
node-js-peer/src/lib/: direct-message.ts  libp2p.ts  peer-color.ts  position.ts  short-peer-id.ts
node-js-peer/src/protobuf/: direct-message.proto
nodejs-peer/: jest.config.cjs  package-lock.json  package.json
nodejs-peer/src/: constants.js  dialer.js  libp2p.js  stream.js
nodejs-peer/test/: webrtc.test.js
py-peer/: .fuse_hidden0001097300000003  .gitignore  API_REFERENCE.md  README.md  chatroom.py  headless.py  hello.py  kivy_ui.py  main.py  main_new.py  pyproject.toml  rag_handler.py  setup.py  system_events.txt  system_messages.txt  tornado_server.py  ui.py  ui_modular.py
py-peer/api/: __init__.py  base.py  dht.py  files.py  identity.py  messages.py  node.py  peers.py  pubsub.py  service.py  topics.py  websocket.py
py-peer/llm/codes/: build_vectorstore.py
py-peer/py-peer-frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
py-peer/py-peer-frontend/src/: App.tsx
py-peer/py-peer-frontend/src/api/: client.ts
py-peer/py-peer-frontend/src/components/: Booting.tsx  Chat.tsx  ConnectionInfoButton.tsx  ConnectionPanel.tsx  LibP2PAssistant.tsx  MessageItem.tsx  Nav.tsx  PeerList.tsx  Spinner.tsx
py-peer/py-peer-frontend/src/context/: PyPeerContext.tsx
py-peer/src/py_peer/: __init__.py  chatroom.py  config.py  main.py  peer.py
py-peer/src/py_peer/network/: __init__.py  discovery.py  host.py
py-peer/src/py_peer/pubsub/: __init__.py  gossipsub.py  handlers.py
py-peer/src/py_peer/utils/: __init__.py  logging.py
python-peer/: Dockerfile  README.md  chatroom.py  direct_message.proto  direct_message.py  discovery.py  identity.py  libp2p_node_config.py  main.py  requirements.txt  ui.py
rust-peer/: .gitignore  Cargo.toml  Dockerfile  fly.toml  rust-toolchain.toml
rust-peer/src/: chatpeer.rs  file_exchange.rs  lib.rs  log.rs  main.rs  message.rs  options.rs  peer.rs  protocol.rs  ui.rs  util.rs
rust-peer/src/ui/: headless.rs  mod.rs  tui.rs  ui.rs
rust-server/: Cargo.toml  Dockerfile  fly.toml
rust-server/src/: main.rs
workshop/: book.toml
workshop/src/: SUMMARY.md  go.md  introduction.md  python.md  rust.md  typescript.md
(+65 files in other folders)
