[project]
name = "py-peer"
version = "0.1.0"
description = "Python implementation of the Universal Connectivity peer and p2p chat experience."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.47.0",
    "libp2p>=0.3.0",
    "trio>=0.22.0",
    "base58",
    "protobuf",
    "janus>=1.0.0",
    "trio_asyncio",
    
]

[project.scripts]
py-peer = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]