[package]
name = "rust-libp2p-webrtc-peer"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.88"
clap = { version = "4.5.32", features = ["derive", "env"] }
crossterm = "0.28.1"
futures = "0.3.31"
futures-timer = "3.0.3"
libp2p = { version = "0.55", features = ["identify", "ping", "tokio", "gossipsub", "macros", "relay", "kad", "rsa", "ed25519", "quic", "request-response", "dns", "memory-connection-limits", "tcp", "noise", "yamux"] }
libp2p-webrtc = { version = "0.9.0-alpha", features = ["tokio", "pem"] }
rand = "0.8.5"
ratatui = "0.29.0"
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tokio-util = { version = "0.7.14", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
unsigned-varint = "0.8.0"
