[package]
name = "rust-libp2p-webrtc-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
env_logger = "0.10.0"
futures = "0.3.27"
libp2p = {version="0.51.1", features = ["identify", "ping", "tokio", "gossipsub", "webrtc", "macros", "kad", "rsa", "ed25519"]}
rand = "0.8.5"
tokio = { version= "1.26.0", features=["full"] }
tokio-util = { version = "0.7", features = ["full"] }
webrtc = { version = "0.6.0", optional = true }
